# orthogonal-arrays

./: CMakeLists.txt
include/: Misc.h  OA.h  OABose.h  OABush.h  OACMJND.h
src/: Misc.cpp  OA.cpp  OABose.cpp  OABush.cpp  OACMJND.cpp  main.cpp  primes.cpp
